--- a/EmptyHtmlFile.html
+++ b/EmptyHtmlFile.html
@@ -7,15 +7,16 @@
     <title>abdullah.imara</title>
 </head>
 <body>
+    <!-- Header -->
     <header>
         <a href="" class="logo">imara designer</a>
         <nav class="navigation">
             <a href="#services">services</a>
             <a href="#projects">Projects</a>
-            <a href="#contact">Contact</a>
+            <a href="#contact">Contact</a> 
         </nav>
     </header>
-
+    <!-- Main Section -->
     <section class="main">
         <div>
             <!--<img src="https://mcdn.wallpapersafari.com/medium/53/53/vQAldS.png"alt="background" />-->
